--- a/appsettings.json
+++ b/appsettings.json
@@ -1,23 +1,25 @@
 {
     "AppSettings": {
         // "BaseUrl": "https://localhost:7290",
-        "BaseUrl": "https://myinvoice.runasp.net",
+        
         "CompanyName": "Invoice"
     },
     "Cors": {
-        "AllowedOrigins": [ "http://localhost:7290" ]
+        "AllowedOrigins": [
+            "http://localhost:7290",
+            "https://rahtk.sa"
+        ]
     },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
-
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         //"Connection": "Data Source=.;Initial Catalog=InvoiceDB;Integrated Security=True;Encrypt=False"
-        "Connection": "Server=db26324.public.databaseasp.net; Database=db26324; User Id=db26324; Password=2k?F-8Qi3Cx=; Encrypt=False; MultipleActiveResultSets=True;"
+        //"Connection": "Server=db26324.public.databaseasp.net; Database=db26324; User Id=db26324; Password=2k?F-8Qi3Cx=; Encrypt=False; MultipleActiveResultSets=True;",
     },
     "Jwt": {
         "Issuer": "Invoice",
